Sytling changes+fix form alignment+ordering cards

--- a/style.css
+++ b/style.css
@@ -34,6 +34,11 @@ body {
   background-color: rgb(26, 95, 26);
 }
 
+
+.bg-white-cust {
+  background-color: rgba(255, 255, 255, 0.6);
+}
+
 .bg-grey {
   background-color: rgb(30, 32, 70);
 }
@@ -49,10 +54,9 @@ body {
 .hero-img{
   background-image: url(full_forest.jpg);
   background-position: center;
-  min-height: 70vh;
 }
 
-/* My change when small screen */
+/* NOTE My change when small screen */
 @media only screen and (max-width: 767px) {
   #message-window {
     height: 120px;
@@ -64,9 +68,6 @@ body {
   #ext-field {
     width: 191px;
   }
-  /* .hero-img{
-    background-image: url(Dogo.png);
-  } */
 }
 
 #form-summary-img{
@@ -85,20 +86,8 @@ body {
   margin-right: 40px;
 }
 
-.height-25vh{
-  height: 25vh;
-}
-
-.height-30vh{
-  height: 30vh;
-}
-
 .spill {
   bottom: -5vh;
-}
-
-.height-21vh{
-  height: 21vh;
 }
 
 .object-fit-contain {
@@ -107,9 +96,12 @@ body {
 
 
 .text-shadow{
-  text-shadow: 1px 1px 4px black;
+  text-shadow: 1px 1px 3px black;
 }
 
+.text-orng-red{
+  color: orangered;
+}
 .text-green{
   color:green;
 }
